# agile-octopus

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily-check.yml
core/: octopus.py
notifiers/: telegram.py
scripts/: check_env.py  setup_region.py  telegram_alerts.py
state/: state_default.json  state_telegram.json
tests/: test_octopus.py
