[project]
name = "agile-octopus"
version = "0.1.0"
description = "Watches Octopus Energy's Agile tariff and posts Telegram alerts on negative, cheap, or spike prices."
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31",
    "tzdata>=2024.1",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "notifiers", "scripts"]
